# Tech-Cosmos.Framework.UnityWebUI

./: CHANGELOG.md  README.md  package.json
BindingProfiles/: 动效页.asset
Editor/: UnityWebUI.Editor.asmdef  UnityWebUIEditorPackagePaths.cs  UnityWebUIProjectSetup.cs  WebViewActionDispatcherEditor.cs  WebViewActionMapperWindow.cs  WebViewBindingProfileUtility.cs  WebViewDependencyBootstrap.cs  WebViewEditorPreviewCore.cs  WebViewEditorPump.cs  WebViewGpuBuildMenu.cs  WebViewGpuPackagesCleanup.cs  WebViewGpuPluginBootstrap.cs  WebViewGpuPluginDeploy.cs  WebViewGpuPluginRestartHelper.cs  WebViewHostEditor.cs  WebViewPreviewWindow.cs
Native/Windows/: apply-gpu-plugin.bat  build.bat  find-unity-editor.bat  find-unity-hub-path.ps1  restart-unity-apply-gpu.bat  unity-editor-path.local.bat  unity-editor-path.local.example.bat  一键重启Unity并应用GPU插件.bat
Native/Windows/UnityWebUI.WebView2Gpu/: CMakeLists.txt  UnityWebUI.WebView2Gpu.vcxproj
Native/Windows/UnityWebUI.WebView2Gpu/include/: WebViewGpuApi.h
Native/Windows/UnityWebUI.WebView2Gpu/src/: WebViewGpuPlugin.cpp
Runtime/: UnityWebUI.Runtime.asmdef
Runtime/WebView/: GreeUnityWebViewBackend.cs  GreeWebViewObjectProxy.cs  IWebViewBackend.cs  IWebViewCaptureSuspend.cs  IWebViewDisplayConfigurable.cs  IWebViewJavaScriptExecutor.cs  IWebViewPumpTarget.cs  LocalPageUrl.cs  NullWebViewBackend.cs  UnityWebUIPackagePaths.cs  VuplexWebViewBackend.cs  WebBridgeScript.cs  WebViewBackendFactory.cs  WebViewBackendOptions.cs  WebViewBridge.cs  WebViewDisplayUtility.cs  WebViewDomClickUtility.cs  WebViewGlobalDriver.cs  WebViewHost.cs  (+10 more)
(+14 files in other folders)
